--- a/nginx.conf
+++ b/nginx.conf
@@ -6,7 +6,7 @@ http {
     server {
         listen 10000;
 
-        server_name your-domain.com;
+        server_name _;
 
         location / {
             proxy_pass http://127.0.0.1:8000;
